# trio-binance

./: .gitignore  CHANGELOG.md  LICENSE  README.md  binance.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
binance/: __init__.py  client.py
tests/: test_async_client.py  test_http_get_exchange_info.py  test_websocket_listener.py  test_ws_depth_bids_asks.py  test_ws_klines_btcusdc_1m.py
trio_binance/: __init__.py  async_client.py  base_client.py  helpers.py  sbe_decoder.py  sbe_example_solusdc.py  trio_helpers.py
trio_binance/ws/: depthcache.py  keepalive_websocket.py  reconnecting_websocket.py  streams.py  threaded_stream.py  trio_stream.py  websocket_api.py
