[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trio-binance"
version = "0.0.3"
description = "A Trio-native fork of python-binance: Websocket + HTTP client for Binance, migrated to Trio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "chris-barklem" }
]
keywords = ["binance", "trio", "websockets", "httpx"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "httpx[http2]",
  "trio",
  'trio-websocket',
  "anyio",
  "yarl",
  "pytz",
  "dateparser",
  "cryptography",
  "pycryptodome",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-trio"]
